[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/uipack-space/Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/SpaceShooterRedux/Bonus/kenvector_future_thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=3]
[ext_resource path="res://addons/SpaceShooterRedux/Bonus/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/gui/barHorizontal_white_mid.png" type="Texture" id=5]
[ext_resource path="res://addons/uipack-space/Fonts/kenvector_future.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_color = Color( 0.0352941, 0.721569, 0.207843, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="score" type="Label" parent="."]
anchor_left = 0.421
anchor_top = 0.013
anchor_right = 0.677
anchor_bottom = 0.113
margin_left = -0.320068
margin_top = -0.04
margin_right = -33.8401
margin_bottom = -9.04001
rect_scale = Vector2( 1.07332, 1.09605 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="message" type="Label" parent="."]
margin_left = 565.0
margin_top = 427.0
margin_right = 1474.0
margin_bottom = 658.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="message_timer" type="Timer" parent="."]
pause_mode = 1
wait_time = 2.0
one_shot = true

[node name="pause_popup" type="Panel" parent="."]
visible = false
modulate = Color( 0.356863, 0.494118, 0.87451, 0.454902 )
self_modulate = Color( 0.0588235, 0.0666667, 0.27451, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_text" type="Label" parent="pause_popup"]
margin_right = 1829.0
margin_bottom = 1021.0
rect_scale = Vector2( 1.07332, 1.09605 )
custom_fonts/font = SubResource( 3 )
text = "paused"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveGame" type="Button" parent="pause_popup"]
pause_mode = 2
physics_interpolation_mode = 1
margin_left = 821.0
margin_top = 698.0
margin_right = 1151.0
margin_bottom = 757.0
custom_fonts/font = SubResource( 6 )
text = "Leave Game"

[node name="shield_bar" type="TextureProgress" parent="."]
anchor_left = 0.083
anchor_top = 0.046
anchor_right = 0.291
anchor_bottom = 0.094
margin_left = -0.360001
margin_top = 2.32
margin_right = -199.72
margin_bottom = -23.52
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Shield bar"
value = 100.0
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="shield_repair" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.083
anchor_top = 0.046
anchor_right = 0.291
anchor_bottom = 0.094
margin_left = -0.360001
margin_top = 2.32
margin_right = -199.72
margin_bottom = -23.52
rect_scale = Vector2( 2, 2 )
hint_tooltip = "Shield bar"
max_value = 20.0

[node name="shield_val" type="Label" parent="."]
anchor_left = 0.421
anchor_top = 0.013
anchor_right = 0.677
anchor_bottom = 0.113
margin_left = -235.32
margin_top = 36.96
margin_right = -626.84
margin_bottom = -17.04
rect_scale = Vector2( 1.1, 1.1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="powerups" type="Node2D" parent="."]

[node name="bronze" type="TextureProgress" parent="powerups"]
margin_left = 1660.0
margin_top = 809.0
margin_right = 1760.0
margin_bottom = 829.0
hint_tooltip = "Shield bar"
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="label" type="Label" parent="powerups/bronze"]
margin_left = -46.0
margin_top = -1.0
margin_right = -21.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="silver" type="TextureProgress" parent="powerups"]
margin_left = 1660.0
margin_top = 859.0
margin_right = 1760.0
margin_bottom = 879.0
hint_tooltip = "Shield bar"
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="label" type="Label" parent="powerups/silver"]
margin_left = -44.0
margin_top = -2.0
margin_right = -19.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="gold" type="TextureProgress" parent="powerups"]
margin_left = 1660.0
margin_top = 907.0
margin_right = 1760.0
margin_bottom = 927.0
hint_tooltip = "Shield bar"
max_value = 5.0
value = 5.0
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="label" type="Label" parent="powerups/gold"]
margin_left = -45.0
margin_top = -2.0
margin_right = -20.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="chronometer" type="Label" parent="."]
margin_left = 1355.0
margin_top = 45.0
margin_right = 1555.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 5 )
text = "0:0:0"
align = 1
valign = 1

[node name="ms" type="Timer" parent="chronometer"]
wait_time = 0.1

[node name="shield_repair_timer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="timeout" from="message_timer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="pause_popup/LeaveGame" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="chronometer/ms" to="." method="_on_ms_timeout"]
[connection signal="timeout" from="shield_repair_timer" to="." method="_on_shield_repair_timer_timeout"]
